Add support for Enums to be part of the Path and Query Supports optional Query Enums and Lists of Enums as well Add an example endpoint that covers the added scenarios Added an import mapping for the GoServerCodegen for "fmt"     when a model is an enum. Expanded the Enum Model for the Go Server to have validation.     Copied this logic from the Go Client Enum Model.
