# samples/server/petstore/go-api-server/go/api_pet.go
@@ -60,6 +60,11 @@ func (c *PetAPIController) Routes() Routes {
 			"/v2/pet/{petId}",
 			c.DeletePet,
 		},
+		"FilterPetsByCategory": Route{
+			strings.ToUpper("Get"),
+			"/v2/pet/filterPets/{gender}",
+			c.FilterPetsByCategory,
+		},
 		"FindPetsByStatus": Route{
 			strings.ToUpper("Get"),
 			"/v2/pet/findByStatus",
@@ -142,10 +147,50 @@ func (c *PetAPIController) DeletePet(w http.ResponseWriter, r *http.Request) {
 	EncodeJSONResponse(result.Body, &result.Code, result.Headers, w)
 }
 
+// FilterPetsByCategory - Finds Pets
+func (c *PetAPIController) FilterPetsByCategory(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	query := r.URL.Query()
+	genderParamPtr, err := NewGenderFromValue(params["gender"])
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+	genderParam := *genderParamPtr
+	speciesParamPtr, err := NewSpeciesFromValue(query.Get("species"))
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+	speciesParam := *speciesParamPtr
+	var notSpeciesParam []Species
+	if query.Has("notSpecies") {
+		for _, param := range strings.Split(query.Get("notSpecies"), ",") {
+			paramEnum, err := NewSpeciesFromValue(param)
+			if err != nil {
+				c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+				return
+			}
+			notSpeciesParam = append(notSpeciesParam, *paramEnum)
+		}
+	}
+	result, err := c.service.FilterPetsByCategory(r.Context(), genderParam, speciesParam, notSpeciesParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, result.Headers, w)
+}
+
 // FindPetsByStatus - Finds Pets by status
 func (c *PetAPIController) FindPetsByStatus(w http.ResponseWriter, r *http.Request) {
 	query := r.URL.Query()
-	statusParam := strings.Split(query.Get("status"), ",")
+	var statusParam [] string
+	if query.Has("status") {
+			statusParam = strings.Split(query.Get("status"), ",")
+	}
 	result, err := c.service.FindPetsByStatus(r.Context(), statusParam)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
@@ -160,7 +205,10 @@ func (c *PetAPIController) FindPetsByStatus(w http.ResponseWriter, r *http.Reque
 // Deprecated
 func (c *PetAPIController) FindPetsByTags(w http.ResponseWriter, r *http.Request) {
 	query := r.URL.Query()
-	tagsParam := strings.Split(query.Get("tags"), ",")
+	var tagsParam [] string
+	if query.Has("tags") {
+			tagsParam = strings.Split(query.Get("tags"), ",")
+	}
 	result, err := c.service.FindPetsByTags(r.Context(), tagsParam)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
